dataset1235/2025-2/805158916/users/2802924318/executions/2118643220_1914301514.log
== RUN (2025-09-01 15:47:57)
-- CODE: 
consumo_minutos = float (input(0.28))
consumo_fixo = int (input(23))
consumo_total = consumo_minutos + consumo_fixo + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:34)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print consumo_total

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:46:56)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:46:57)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:47:48)
-- CODE: 
consumo_minutos = float (input(0.28))
consumo_fixo = int (input(23))
consumo_total = consumo_minutos + consumo_fixo + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:46:51)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:42)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print consumo_total

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:45:38)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print consumo_total

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
File "XXXX", line 4
    print consumo_total
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:46:50)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:45:52)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:51)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:47:56)
-- CODE: 
consumo_minutos = float (input(0.28))
consumo_fixo = int (input(23))
consumo_total = consumo_minutos + consumo_fixo + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:59)
-- CODE: 
consumo_minutos = float (input())
consumo_fixo = int (input())
consumo_total = consumo_minutos * 0.28 + consumo_fixo + 23 + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input())
                        ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:47:49)
-- CODE: 
consumo_minutos = float (input(0.28))
consumo_fixo = int (input(23))
consumo_total = consumo_minutos + consumo_fixo + consumo_total * (31 / 100)
print (consumo_total)

                        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    consumo_fixo = int (input(23))
                        ^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
